# multimodal-video-rag-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
docs/: design-and-interview.md
eval/: eval_set.jsonl
scripts/: ask.py  build_eval.py  check_env.py  clip_test.py  embed_test.py  evaluate.py  index.py  ingest.py  rerank_demo.py  search_test.py  transcribe_test.py
src/mvrag/: __init__.py  config.py  schemas.py
src/mvrag/embedding/: __init__.py  image.py  text.py
src/mvrag/generation/: __init__.py  answerer.py  llm.py
src/mvrag/indexing/: __init__.py  chunking.py  store.py
src/mvrag/ingestion/: __init__.py  audio.py  frames.py  pipeline.py
src/mvrag/retrieval/: __init__.py  rerank.py  retriever.py
