[project]
name = "mvrag"
version = "0.1.0"
description = "Multimodal Video RAG Assistant — upload a video, ask questions, get timestamped answers."
requires-python = ">=3.10"
dependencies = [
  # web / app
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",   # FastAPI file uploads
  "httpx>=0.27",
  "streamlit>=1.33",
  # data / store
  "numpy",
  "pillow>=10.0",
  "pandas>=2.0",
  "lancedb>=0.9",
  # local LLM client
  "ollama>=0.3",
  # utils
  "tqdm>=4.66",
  "rich>=13.7",
]

# Heavy ML deps installed in Phase 1 (kept separate so `pip install -e .`
# stays fast, and so torch/CUDA install issues are isolated to one step).
[project.optional-dependencies]
ml = [
  "torch>=2.2",
  "torchvision>=0.17",
  "faster-whisper>=1.0",
  "open-clip-torch>=2.24",
  "sentence-transformers>=3.0",
  "scenedetect[opencv]>=0.6.4",
  "opencv-python>=4.9",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
